--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
             border-radius: 10px;
             box-shadow: 0 0 10px cyan;
         }
+@media (max-width: 768px) {
+    .nav-links {
+        flex-direction: column;
+        gap: 10px;
+        text-align: center;
+    }
 
         .nav-links {
             display: flex;
