--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
             box-shadow: 0 0 10px cyan;
         }
 @media (max-width: 768px) {
-    .logo {
-        width: 80px; /* Smaller logo */
-        height: auto;
+     .skills-grid {
+        display: block; /* Prevents grid from creating extra columns */
     }
 
     .project img {
