--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </script>
 
     <header class="container">
-        <img src="i.png" alt="Cybersec logo" class="logo">
+        <img src="i.png" alt="Cybersec logo" class="logo" style= "width: 500px;">
         <h1>Caleb Maldonado</h1>
         <p>Aspiring Cybersecurity Professional</p>
     </header>
