--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
     body {
         overflow-x: hidden; /* Prevents unwanted horizontal scrolling */
     }
+    
+     .logo {
+        max-width: 150px; /* Adjust size as needed */
+        height: auto; /* Maintain aspect ratio */
+        display: block;
+        margin: 0 auto; /* Center the logo */
+    }
 
     .container, .section, .nav-links {
         display: flex;
