--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     }
     
      .logo {
-        max-width: 150px; /* Adjust size as needed */
+        max-width: 100%; /* Adjust size as needed */
         height: auto; /* Maintain aspect ratio */
         display: block;
         margin: 0 auto; /* Center the logo */
