--- a/index.html
+++ b/index.html
@@ -74,10 +74,6 @@
         width: 100%; /* Forces it to take the full width */
     }
 
-    .nav-links {
-        padding: 0px 0;
-    }
-
     .nav-links li {
         width: 100%; /* Ensures the links don’t appear in multiple columns */
     }
@@ -90,6 +86,7 @@
 }
 
         .nav-links {
+            flex-wrap: wrap;
             display: flex;
             justify-content: center;
             gap: 15px;
