--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
             box-shadow: 0 0 10px cyan;
         }
 @media (max-width: 768px) {
+    .container{
+    display: flex;
+    }
     body {
         overflow-x: hidden; /* Prevents unwanted horizontal scrolling */
     }
