--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@
     <h2>Certifications</h2>
     <ul>
         <li>McGrawHill Excel Blackbelt</li>
-        <li>CompTIASecurity +</li>
-        <li>ACI CmpTIA A+ Course Completion</li>
+        <li>CompTIA Security +</li>
+        <li>CompTIA Network +</li>
+        <li>ACI CompTIA A+ Course Completion</li>
     </ul>
 </section>
 
