--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     <a style="color: #0c2340;"  href="#education">Education</a>
     <a style="color: #0c2340;"  href="#certifications">Certifications</a>
     <a style="color: #0c2340;" href="#projects">Projects</a>
+    <a style="color: #f15a22;" href="Cyber_writeup.html">Cybersecurity Writeups</a>
+
 </nav>
 
 <section id="about">
