--- a/Cyber_writeup.html
+++ b/Cyber_writeup.html
@@ -56,6 +56,13 @@
             margin: 30px 0 10px 0;
             color: #888;
         }
+        .responsive-img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+        }
+
     </style>
 </head>
 <body>
@@ -118,7 +125,7 @@
 
         <p><em>Query:</em><code>index="main"</code></p>
 
-        <img src="question1.png" alt="Query 1 Screenshot" width="870">
+        <img src="question1.png" alt="Query 1 Screenshot" width="870" class="responsive-img">
 
         <p><strong>On one of the infected hosts, the adversary was successful in creating a backdoor user. What is the new username?</strong><br>
         <strong>Answer:</strong> A1berto</p>
@@ -127,7 +134,7 @@
 
         <p><em>Query:</em> <code>index="main" EventID="4720"</code></p>
 
-        <img src="question2.png" alt="Query 2 Screenshot" width="870">
+        <img src="question2.png" alt="Query 2 Screenshot" width="870" class="responsive-img">
 
         <p><strong>On the same host, a registry key was also updated regarding the new backdoor user. What is the full path of that registry key?</strong><br>
         <strong>Answer:</strong> HKLM\SAM\SAM\Domains\Account\Users\Names\A1berto</p>
@@ -137,7 +144,7 @@
 
         <p><em>Query:</em> <code>index="main" EventID=13 A1berto</code></p>
 
-        <img src="question3.png" alt="Query 3 Screenshot" width="870">
+        <img src="question3.png" alt="Query 3 Screenshot" width="870" class="responsive-img">
 
         <p><strong>Examine the logs and identify the user that the adversary was trying to impersonate.</strong><br>
         <strong>Answer:</strong> Alberto</p>
@@ -146,7 +153,7 @@
         
         <p><em>Query:</em> <code>index="main"</code></p>
 
-        <img src="question4.png" alt="Query 4 Screenshot" width="870">
+        <img src="question4.png" alt="Query 4 Screenshot" width="870" class="responsive-img">
 
         <p><strong>What is the command used to add a backdoor user from a remote computer?</strong><br>
         <strong>Answer:</strong> <code>C:\windows\System32\Wbem\WMIC.exe” /node:WORKSTATION6 process call create “net user /add A1berto paw0rd1</code></p>
@@ -156,7 +163,7 @@
 
         <p><em>Query:</em> <code>index="main" EventID=1 A1berto</code></p>
 
-        <img src="question5.png" alt="Query 5 Screenshot" width="870">
+        <img src="question5.png" alt="Query 5 Screenshot" width="870" class="responsive-img">
 
         <p><strong>How many times was the login attempt from the backdoor user observed during the investigation?</strong><br>
         <strong>Answer:</strong> 0</p>
@@ -164,31 +171,31 @@
         <p>I then decided to check for successful (4624) and failed (4625) logon events involving the backdoor user. However, no events were found and that ended up being the answer.</p>
         <p><em>Query:</em> <code>index="main" EventID="4625" OR EventID="4624" A1berto</code></p>
 
-        <img src="question6.png" alt="Query 6 Screenshot" width="870">
+        <img src="question6.png" alt="Query 6 Screenshot" width="870" class="responsive-img">
 
         <p><strong>What is the name of the infected host on which suspicious PowerShell commands were executed?</strong><br>
         <strong>Answer:</strong> James.browne</p>
         <p>These event IDs represent PowerShell script block logging and command invocation. The hostname can be found in the event fields.</p>
         <p><em>Query:</em> <code>index="main" PowerShell/code></p>
-        <img src="question7.png" alt="Query 7 Screenshot" width="870">
+        <img src="question7.png" alt="Query 7 Screenshot" width="870" class="responsive-img">
 
         <p><strong>PowerShell logging is enabled on this device. How many events were logged for the malicious PowerShell execution?</strong><br>
         <strong>Answer:</strong> 79</p>
         <p>These event IDs represent PowerShell script block logging(4104) and command invocation(4103).</p>
         <p><em>Query:</em> <code>index="main" EventID="4104" OR EventID="4103"</code></p>
-        <img src="question7.png" alt="Query 7 Screenshot" width="870">
+        <img src="question7.png" alt="Query 7 Screenshot" width="870" class="responsive-img">
 
         <p><strong>An encoded Powershell script from the infected host initiated a web request. What is the full URL?</strong><br>
         <strong>Answer:</strong> hxxp[://]10[.]10[.]10[.]5/news[.]php</p>
         <p>I used the same query as the previous question, I then looked into the ContextInfo field and found almost every result had the same encrypted string</p>
-        <img src="question81.png" alt="Query 8 Screenshot" width="870">
+        <img src="question81.png" alt="Query 8 Screenshot" width="870" class="responsive-img">
         <p>I then wanted to get only the Host Application section to see if there were any other encrypted strings. I used <code>| rex field=ContextInfo "Host Application = (?<Command>[^\r\n]+)"</code></p>
         <p>After that I wanted to make sure that the contents of the newly created "Command" field does not get duplicated so I used <code>| dedup Command</code> This lead me to this:</p>
-        <img src="question82.png" alt="Query 9 Screenshot" width="870">
+        <img src="question82.png" alt="Query 9 Screenshot" width="870" class="responsive-img">
         <p>I then extracted the string, ran it through cyberchef, and decoded it using base64.</p>
-        <img src="question83.png" alt="Query 10 Screenshot" width="870">
+        <img src="question83.png" alt="Query 10 Screenshot" width="870" class="responsive-img">
         <p>From there I got the IP address and defanged it.</p>
-        <img src="question84.png" alt="Query 11 Screenshot" width="870">
+        <img src="question84.png" alt="Query 11 Screenshot" width="870" class="responsive-img">
         <section id="conclusion1">
         <h3>Conclusion</h3>
         <p>Completing the SOC Level 1 room on TryHackMe gave me hands-on experience
